# archi-comm

./: .editorconfig  .gitignore  .mcp.json  .npmrc  .releaserc.json  AGENTS.md  ANNOTATION_CANVAS_STORE_ACTIONS.md  ANNOTATION_FEATURE_IMPLEMENTATION_STATUS.md  API_STABILITY.md  CANVAS_CODE_REVIEW_FIXES.md  CANVAS_STORE_ANIMATION_ACTIONS.md  CANVAS_USABILITY_IMPROVEMENTS.md  CANVAS_WORLD_CLASS_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIGHT_FEATURES_IMPLEMENTATION_STATUS.md  E2E_TEST_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MAINTAINERS.md  METRICS.md  OPTIMIZATION_RESULTS.md  README.md  README_ESLINT_FIXES.md  SECURITY.md  STORE_MIGRATION_GUIDE.md  TAURI_SETUP.md  TODO.md  VERIFICATION_IMPLEMENTATION_STATUS.md  commitlint.config.js  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  sonar-project.properties  (+3 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: commit-msg  pre-commit  pre-push
Casks/: archi-comm.rb
Formula/: archi-comm.rb
config/: .prettierrc  .releaserc.json  coverage.config.json  eslint.config.js  playwright.config.ts  playwright.shared.ts  sonar-project.properties  tsconfig.json  vite.config.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  CANVAS_ARCHITECTURE.md  DEVELOPER_EXPERIENCE.md  DISTRIBUTION.md  MIGRATION.md  MVP_AND_EVOLUTION.md  OPENSSF_APPLICATION.md  PERFORMANCE_MONITORING_USAGE.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_REFACTOR_GUIDE.md  REACT_BEST_PRACTICES.md  README.md  RENDER_OPTIMIZATION_GUIDE.md  SIMPLIFICATION_PLAN.md  STATE_MANAGEMENT_ADR.md  TODO_PROGRESS.md  suggestions.md
e2e/: README-DEMO-SCREENSHOTS.md  README-DEMO-VIDEOS.md  README.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  a11y-canvas.spec.ts  a11y-smoke.spec.ts  annotation-edit-dialog.spec.ts  app-workflow.spec.ts  canvas-debug.spec.ts  canvas-diagnosis.spec.ts  canvas-flow-working.spec.ts  canvas-functionality.spec.ts  canvas-height-fix-test.spec.ts  (+34 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.nosign.json
src-tauri/icons/: icon.icns
src-tauri/src/: dev_utils.rs  main.rs  transcription.rs
(+515 files in other folders)
